--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.36",
+    "@ai-sdk/react": "^0.0.22",
     "@remix-run/node": "^2.10.2",
     "@remix-run/react": "^2.10.2",
     "@remix-run/serve": "^2.10.2",
     "@vercel/remix": "^2.10.2",
+    "ai": "^3.2.27",
     "isbot": "^4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.2",
